# python-sdk

./: .gitignore  .gitmodules  Makefile  README.en.md  README.md  pyproject.toml
examples/: README.md  demo_agent.py
scripts/: e2e_gateway_stack.mjs  gen_schema.py
src/ath/: __init__.py  exceptions.py  meta.py  types.py
src/ath/client/: __init__.py  _attestation.py  _base.py  async_base.py  async_gateway.py  async_native.py  base.py  gateway.py  native.py
tests/: conftest.py  test_async_client.py  test_e2e.py  test_meta.py  test_sync_client.py  test_types.py
